Prevent overflow

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -105,6 +105,7 @@ div.content-panel {
     box-shadow: 0 1px 3px rgba(0,0,0,0.25), 0 1px 0 rgba(0,0,0,0.1) inset;
     padding: 5px 10px;
     margin-bottom: 10px;
+    overflow: auto;
 
     h3 {
       border-bottom: 1px solid #efefef;
